# byztimed

./: .gitignore  .gitmodules  CONFIG.md  Cargo.toml  README.md  shell.nix
byztime/: Cargo.toml  README.md
byztime-sys/: Cargo.toml  README.md  build.rs
byztime-sys/src/: lib.rs
byztime/src/: lib.rs
byztimed/: Cargo.toml  README.md  build.rs
byztimed/.cargo/: config
byztimed/benches/: main.rs
byztimed/src/: aead.rs  config.rs  cookie.rs  core.rs  lib.rs  logging.rs  main.rs  ntske.rs  peer_name.rs  store.rs  time_client.rs  time_server.rs  time_test.rs  wire.proto
byztimed/tests/: 1node.rs  4node_local.rs
byztimed/tests/common/: mod.rs
byztimed/tests/test_certs/: .gitignore  alice.crt  alice.csr  alice.key  bob.crt  bob.csr  bob.key  charlie.crt  charlie.csr  charlie.key  dave.crt  dave.csr  dave.key  gen-x509.sh  gorgias.crt  gorgias.csr  gorgias.key  trent.crt  trent.csr  trent.key  trent.srl
