[package]
name = "byztime"
version = "2.0.0-alpha1"
authors = ["Daniel Franke <dafranke@akamai.com>"]
edition = "2018"
description = "Idiomatic Rust bindings for libbbyztime"
repository = "https://github.com/akamai-contrib/byztimed"
license = "Apache-2.0"
keywords = ["byzantine", "time", "byztime"]
categories = ["api-bindings", "date-and-time"]

[features]
with_quickcheck = [ "quickcheck", "rand" ]

[dependencies]
byztime-sys = { version = "2.0.0-alpha1", path = "../byztime-sys" }
errno = "0.2"
libc = "0.2"
quickcheck = { version = "0.9", optional = true }
rand = { version = "0.7", optional = true }

[dev-dependencies]
rand = "0.7"
quickcheck = "0.9"
quickcheck_derive = "0.3"
quickcheck_macros = "0.9"